--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-dom-munger": "^3.4.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.13.1",
+    "express": "^4.13.0"
   }
 }
